messages builder, wip

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(tests)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c11")
 
 find_library(CMOCKA_LIB cmocka)
 
@@ -10,8 +10,8 @@ include_directories(
 )
 
 add_executable(tests
-  ../src/sds011_parser.c
-  ../src/sds011_builder.c
+  ../src/sds011_parser.c    ./tests_parser.c
+  ../src/sds011_builder.c   ./tests_builder.c
   ./tests.c
 )
 
