main module, wip

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     ".screenrc": "bat",
     "setjmp.h": "c",
-    "sds011_parser.h": "c"
+    "sds011_parser.h": "c",
+    "cmocka.h": "c"
   }
 }
