messages validation, call callback only if message corresponds the request

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(parser_example
 add_executable(example
   ../src/sds011_parser.c
   ../src/sds011_builder.c
+  ../src/sds011_validator.c
   ../src/sds011.c
   ./example.c
 )
