--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(tests
   ../src/sds011_parser.c    ./tests_parser.c
   ../src/sds011_builder.c   ./tests_builder.c
   ../src/sds011_validator.c
+  ../src/sds011_fifo.c      ./tests_fifo.c
   ../src/sds011.c           ./tests_sds011.c
   ./tests.c
 )
