--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.1)
 project(tests)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -std=c11 -g -O0")
@@ -18,10 +18,24 @@ add_executable(tests
   ./tests.c
 )
 
-add_custom_command(TARGET tests
-  POST_BUILD
+# enable_testing()
+# add_test(tests ./tests)
+
+# add_custom_command(TARGET tests
+#   POST_BUILD
+#   COMMAND lcov --zerocounters --directory . || true
+#   COMMAND ./tests
+#   COMMAND lcov --capture --directory . --output-file coverage.info --rc lcov_branch_coverage=1
+#   COMMAND genhtml coverage.info --output-directory out --rc lcov_branch_coverage=1
+#   COMMAND lcov -v
+# )
+
+add_custom_target(test
   COMMAND lcov --zerocounters --directory . || true
   COMMAND ./tests
+)
+
+add_custom_target(coverage
   COMMAND lcov --capture --directory . --output-file coverage.info --rc lcov_branch_coverage=1
   COMMAND genhtml coverage.info --output-directory out --rc lcov_branch_coverage=1
   COMMAND lcov -v
