--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,14 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "bootstrap",
+      "type": "shell",
+      "command": [
+        "mkdir -p ./tests/build/ && cd ./tests/build/ && cmake .."
+      ],
+      "group": "build"
+    },
+    {
       "label": "build",
       "type": "shell",
       "command": "make",
@@ -22,6 +30,13 @@
         "kind": "test",
         "isDefault": true
       }
+    },
+    {
+      "label": "coverage",
+      "type": "shell",
+      "command": "make coverage",
+      "options": { "cwd": "./tests/build" },
+      "group": "test"
     }
   ]
 }
