migrate to Ninja build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.14)
+project(sds011)
 
-add_subdirectory(./tests)
 add_subdirectory(./examples)
+
+# enable_testing()
+# add_test(NAME UnitTests COMMAND ./tests/tests)
+add_subdirectory(./tests)
