--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,22 +4,14 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    { 
-      "name": "(lldb) Attach",
-      "type": "cppdbg",
-      "request": "attach",
-      "program": "${workspaceFolder}/tests/build/tests",
-      "processId": "${command:pickProcess}",
-      "MIMode": "lldb"
-    },
     {
       "name": "(lldb) Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/tests/build/tests",
+      "program": "${workspaceFolder}/build/examples/example",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/tests/build",
+      "cwd": "${workspaceFolder}/build/examples",
       "environment": [],
       "externalConsole": false,
       "MIMode": "lldb"
