--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,8 @@ add_subdirectory(./examples)
 
 enable_testing()
 add_subdirectory(./tests)
+
+add_custom_target(lint COMMAND cppcheck --enable=all
+  ${CMAKE_SOURCE_DIR}/tests/
+  ${CMAKE_SOURCE_DIR}/src/
+)
